validate email and datetime

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -77,6 +77,10 @@ code {
   border-color: #e5e5e5;
 }
 
+.image-div {
+  max-height: 153px;
+  max-width: 383px;
+}
 .event-item {
   width: 383px;
   height: 308px;
