--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,11 +75,13 @@ code {
   border-width: 0 1px 1px 1px;
   border-style: solid;
   border-color: #e5e5e5;
+  max-height: 300px;
+  overflow-y: scroll;
 }
 
 .image-div {
-  max-height: 153px;
-  max-width: 383px;
+  height: 153px;
+  width: 383px;
 }
 .event-item {
   width: 383px;
